[gd_scene load_steps=11 format=3 uid="uid://chd0jbgqx1yf7"]

[ext_resource type="Texture2D" uid="uid://bt83vx5icdwxi" path="res://Graphics/Enemy/ZombBoss.png" id="1_5n5j7"]
[ext_resource type="Script" uid="uid://cvn1iyiyoy5tn" path="res://Scripts/Enemies/zombie_boss.gd" id="1_s3g07"]
[ext_resource type="Texture2D" uid="uid://c8m8pt3tt2aet" path="res://Graphics/Interactables/ApocalypseBossBarrel.png" id="2_7kvgb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7kvgb"]
atlas = ExtResource("1_5n5j7")
region = Rect2(67, 1, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1g37"]
atlas = ExtResource("1_5n5j7")
region = Rect2(1, 1, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3g07"]
atlas = ExtResource("1_5n5j7")
region = Rect2(34, 1, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w67gq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kvgb")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1g37")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3g07")
}],
"loop": true,
"name": &"Throw",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqudi"]
size = Vector2(20, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_w67gq"]
atlas = ExtResource("2_7kvgb")
region = Rect2(26, 26, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_rqudi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w67gq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ZombieBoss" type="CharacterBody2D" groups=["Boss"]]
z_index = 1
collision_layer = 8
collision_mask = 8
script = ExtResource("1_s3g07")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_w67gq")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_rqudi")

[node name="BarrelSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_rqudi")
autoplay = "default"

[node name="ThrowTimer" type="Timer" parent="."]
one_shot = true

[node name="GrabTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ThrowTimer" to="." method="_on_throw_timer_timeout"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_grab_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
